<resources>
    <string name="app_name">CemkDay</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="logo">logo</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="hint">SomeGoodDefaultPassword</string>
    <string name="it1802">it1802 or it1802@cemk.ac.in</string>
    <string name="login_button">login button</string>
    <string name="cemkday">CemkDay</string>
    <string name="dev_on_way">pratimdevonplay@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="bug_report_feature_request">Bug Report</string>
    <string name="about">About</string>
    <string name="_cached">Cached Response if enabled</string>
    <string name="_notif">Enable Daily Attendance Report (Notification)</string>
    <string name="change_time">Change Time</string>
    <string name="bug_description">Bug Description</string>
    <string name="write_bug_description_here">Write bug description here. (Brief)</string>
    <string name="select_severity">Select Severity</string>
    <string name="is_seen_multiple_times">Is seen multiple times.</string>
    <string name="it_is_a_rooted_device">It is a rooted device</string>
    <string name="i_agree_to_privacy_policy">I agree to privacy policy.</string>
    <string name="view_password">view password</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="biology">ex - Biology</string>
    <string name="logout">Logout</string>
    <string name="daily_attendance_check_occurs_at">Daily attendance check occurs at:</string>
    <string name="enable_forced_mode_text">Enable forced mode (Notification enabled, try only if normal mode does not work)</string>
    <string name="_08_00">08:00</string>
    <string name="restart_service">Start Attendance Checker</string>
    <string name="_stop">Stop Attendance Checker</string>
    <string name="_start">Start attendance checker</string>
    <string-array name="bug_types">
        <item>Critical</item>
        <item>Minor</item>
        <item>Enhancement/Feature+</item>
    </string-array>
</resources>
