<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nasa"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/daily_attendance_check_occurs_at"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nasa"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/_08_00"
            android:textColor="@color/colorPrimarySettingAct"
            android:textSize="40sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/daily_chk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nasa"
            android:padding="5dp"
            android:text="@string/_notif"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:thumbTint="@color/colorPrimarySettingAct"
            app:trackTint="@color/colorPrimaryDarkBug" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/force_chk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nasa"
            android:padding="5dp"
            android:text="@string/enable_forced_mode_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:thumbTint="@color/colorPrimarySettingAct"
            app:trackTint="@color/colorPrimaryDarkBug" />

    </LinearLayout>

    <Button
        android:id="@+id/changeTime"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimarySettingAct"
        android:fontFamily="@font/nasa"
        android:layout_margin="-50dp"
        android:padding="-50dp"
        android:text="@string/change_time"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/startService"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorDropMain"
        android:fontFamily="@font/nasa"
        android:text="@string/restart_service"
        android:layout_margin="-50dp"
        android:padding="-50dp"
        android:textColor="@android:color/white" />
</LinearLayout>



